feat(lmf): support UE-assisted E-CID over LPP (#1784)
